# LitoEngine

./: CMakeLists.txt  LitoEngine.cpp  LitoEngine.h  README.md
algebra/: Matrix.hpp  MatrixEnum.hpp  MatrixOperations.hpp  Matriz_2.hpp  Matriz_3.hpp  Matriz_4.hpp  Operacoes.hpp  Vec_2.hpp  Vec_3.hpp  Vec_4.hpp  algebra_matriz.hpp  algebra_vetor.hpp
engines/: Engine_OpenGl.cpp  Engine_SDL.cpp  Engine_SDL.h
libs/glew/: glew.pc
